Bug 206190 - Applying a template when importing a .csv file crashes Kontact
Summary: Applying a template when importing a .csv file crashes Kontact
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-04 00:40 UTC by Sabine Faure
Modified: 2009-09-10 20:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-04 00:40:49 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook.
- find or export 3 contacts in a .csv file
- Go to File menu/Import/Import CSV file...
- Browse to enter the .csv file in 'File to import'
- Change the 'Undefined' headings in proper headings
- Click on 'Save Template...'
- A 'Save as' dialogue opens. Name the template (ex: Template A) and click on 'Save'
- A 'Template Name' dialogue appears asking you again for the name. Enter the name again. Click on 'Ok'
- Click on 'Apply Template'. 
- Select Template A and click on 'Ok'

Kontact crashes.

Trunk, Svn Rev 1019355
Comment 1 Tobias Koenig 2009-09-04 15:03:17 UTC
SVN commit 1019808 by tokoe:

Do not block or crash when applying a template

BUG: 206190


 M  +29 -16    csvimportdialog.cpp  
 M  +6 -5      csvimportdialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019808
Comment 2 Sabine Faure 2009-09-10 20:09:48 UTC
It is corrected now. 

Kaddressbook does not crash anymore when applying a template.

Trunk, Svn Rev 1021831