Do not block or crash when applying a template

BUG: 206190

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1019808